<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".AddExpense">


    <Button
        android:id="@+id/saveExpenseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="70dp"
        android:text="@string/SaveExpense"
        android:backgroundTint="@color/income"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="70dp"
        android:text="@string/cancelBtn"
        android:backgroundTint="@color/expense"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="415dp"
        android:layout_height="102dp"
        android:background="@color/cardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="99dp"
            android:layout_height="102dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/applogo" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Welcome"
            android:textColor="@color/Grey"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Manith"
            android:textColor="@color/Grey"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/headerdescription"
            android:textColor="@color/Grey"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="77dp"
            android:layout_height="67dp"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/p" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="359dp"
        android:layout_height="478dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:elevation="18dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        >


        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/hintTitle"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="104dp"
            android:layout_height="22dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/Category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:entries="@array/ExpenseCategory_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/hintDate"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="286dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/hintAmountExpense"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/AddExpensebtn"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="75dp"
            android:layout_height="67dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/down" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="22dp"
            android:layout_height="23dp"
            android:layout_marginTop="34dp"
            android:text="@string/Rs"
            app:layout_constraintEnd_toStartOf="@+id/editTextText3"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="420dp"
        android:layout_height="51dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/homeicon"
            android:layout_width="38dp"
            android:layout_height="57dp"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_cottage_24" />

        <ImageView
            android:id="@+id/incomeicon"
            android:layout_width="56dp"
            android:layout_height="46dp"
            android:layout_marginStart="60dp"
            app:layout_constraintStart_toEndOf="@+id/homeicon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_circle_up_24" />

        <ImageView
            android:id="@+id/expenseicon"
            android:layout_width="56dp"
            android:layout_height="46dp"
            android:layout_marginStart="60dp"
            app:layout_constraintStart_toEndOf="@+id/incomeicon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrowcircledown" />

        <ImageView
            android:id="@+id/profileicon"
            android:layout_width="44dp"
            android:layout_height="47dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toEndOf="@+id/expenseicon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_person_2_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>